cmake_minimum_required(VERSION 3.0)
project(Argus-distribution)

set(CMAKE_CXX_STANDARD 14)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3")

list(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR})
cmake_policy(SET CMP0054 OLD)
cmake_policy(SET CMP0074 OLD)

add_definitions(-D WIN32)
add_definitions(-D _USE_MATH_DEFINES )
# set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /MP /Zi")
# FIND_PACKAGE(Eigen3 REQUIRED)
include_directories(includes)
if(APPLE)
  if(CMAKE_C_COMPILER_ID MATCHES "Clang")
        set(OpenMP_C "${CMAKE_C_COMPILER}")
        set(OpenMP_C_FLAGS "-Xpreprocessor -fopenmp -lomp -Wno-unused-command-line-argument")
        set(OpenMP_C_LIB_NAMES "libomp" "libgomp" "libiomp5")
        set(OpenMP_libomp_LIBRARY ${OpenMP_C_LIB_NAMES})
        set(OpenMP_libgomp_LIBRARY ${OpenMP_C_LIB_NAMES})
        set(OpenMP_libiomp5_LIBRARY ${OpenMP_C_LIB_NAMES})
    endif()
    if(CMAKE_CXX_COMPILER_ID MATCHES "Clang")
      set(OpenMP_CXX "${CMAKE_CXX_COMPILER}")
      set(OpenMP_CXX_FLAGS "-Xpreprocessor -fopenmp -lomp -Wno-unused-command-line-argument")
      set(OpenMP_CXX_LIB_NAMES "libomp" "libgomp" "libiomp5")
      set(OpenMP_libomp_LIBRARY ${OpenMP_CXX_LIB_NAMES})
      set(OpenMP_libgomp_LIBRARY ${OpenMP_CXX_LIB_NAMES})
      set(OpenMP_libiomp5_LIBRARY ${OpenMP_CXX_LIB_NAMES})
    endif()
    set(OpenMP_EXE_LINKER_FLAGS "-lomp")
    link_directories(${OpenMP_LINK_DIRECTORIES})
endif()
link_directories(.)
find_package(OpenMP QUIET REQUIRED)
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS}")

if(WIN32)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS} /MP /bigobj")
endif()
add_definitions(-DSILENCE_ARGUS)

# include_directories(${EIGEN3_INCLUDE_DIR})
include_directories(${PROJECT_SOURCE_DIR}/src)
include_directories(${PROJECT_SOURCE_DIR}/external)
include_directories(${PROJECT_SOURCE_DIR}/deps/bogus-interface/interface/src)
include_directories(${PROJECT_SOURCE_DIR}/deps/bogus-interface/extern/so-bogus)
include_directories(${PROJECT_SOURCE_DIR}/deps/libarcsim/include)
include_directories(deps/bogus-interface/extern)
add_subdirectory("deps/bogus-interface/interface")
add_subdirectory("deps/libarcsim")

add_subdirectory("src")

add_subdirectory("apps")
